Ajustes no instalador, criação do packer de HTML

--- a/utils/initPack/src/_assets/templates/templates.html
+++ b/utils/initPack/src/_assets/templates/templates.html
@@ -14,20 +14,7 @@
 
 <!--R4TEMPLATE-loading-->
 <style>
-	.loadOverlay {
-		position: fixed;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		background: lightgray;
-		color: black;
-		text-align: center;
-		padding: 200px 0;
-		z-index: 9999;
-		font-family: monospace;
-		font-size: 11px
-	}
+	.loadOverlay { position: fixed; width: 100%; height: 100%; top: 0; left: 0; background: lightgray; color: black; text-align: center; padding: 200px 0; z-index: 9999; font-family: monospace; font-size: 11px;	}
 </style>
 <div class="loadOverlay hidden">
 	&#8635; Carregando...
