Tabs e mais padronização do example

--- a/example/src/_assets/templates/templates.html
+++ b/example/src/_assets/templates/templates.html
@@ -35,6 +35,20 @@
 <!--/R4TEMPLATE-->
 
 
+<!--R4TEMPLATE-innerHead-->
+<header id="innerHead">
+	<div id="backBar" class="bgPrimary">
+		<div id="boxLogoCC" class="onRight">
+			<img src="_assets/icons/icon-32x32.png">
+		</div>
+	</div>
+	<div id="boxLogoCli" class="bgGrey" >
+		Sua<br>marca<br>aqui
+	</div>
+</header>
+<!--/R4TEMPLATE-->
+
+
 <!--R4TEMPLATE-endBody-->
 <link rel="stylesheet" type="text/css" href="_assets/r4/r4.min.css" />
 <script defer src="_assets/r4/r4.min.js"></script>
