--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic);
-
+/*@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic);
+*/
 /* -----
 SVG Icons - svgicons.sparkk.fr
 ----- */
