Reajuste geral do example pra se adequar ao reajuste geral do JS

--- a/example/src/operacoes/vendas/templates/formVendas.html
+++ b/example/src/operacoes/vendas/templates/formVendas.html
@@ -1,4 +1,4 @@
-<form id="formVendas" fieldsPrefix="vendas" title="Vendas">
+<form id="formVendas" class="hidden" fieldsPrefix="vendas">
 	<p class="R4" onclick="Vendas.detalharProd1()">Detalhar produto 1</p>
 	<div class="row">
 		<div class="col-3">
