--- a/example/src/produtos/templates/formProdutos.html
+++ b/example/src/produtos/templates/formProdutos.html
@@ -1,4 +1,4 @@
-<form id="formProdutos" fieldsPrefix="prod" title="Cadastro de produtos">
+<form id="formProdutos" class="hidden" fieldsPrefix="prod">
 	<div class="row">
 		<div class="col-12" id="prod_nome">Nome do produto</div>
 		<div class="col-6"  id="prod_categoria">Categoria</div>
