--- a/css/global.css
+++ b/css/global.css
@@ -20,8 +20,8 @@ SVG Icons - svgicons.sparkk.fr
   stroke-width: 1;
 }
 
-.bgPrimary { background-color: #2196f3 !important; }
-.bgInfo    { background-color: #673ab7 !important; }
+.bgPrimary { background-color: #673ab7 !important; }
+.bgInfo    { background-color: #2196f3 !important; }
 .bgDanger  { background-color: #e81e62 !important; }
 .bgSuccess { background-color: #009688 !important; }
 .bgWarning { background-color: #f37e21 !important; }
@@ -31,8 +31,8 @@ SVG Icons - svgicons.sparkk.fr
 .bgWhite   { background-color: #ffffff !important; }
 .bgBlack   { background-color: #000000 !important; }
 
-.primary { color: #2196f3 !important; }
-.info    { color: #673ab7 !important; }
+.info    { color: #2196f3 !important; }
+.primary { color: #673ab7 !important; }
 .danger  { color: #e81e62 !important; }
 .success { color: #008275 !important; }
 .warning { color: #f37e21 !important; }
