--- a/example/src/operacoes/vendas/templates/formVendas.html
+++ b/example/src/operacoes/vendas/templates/formVendas.html
@@ -1,5 +1,5 @@
 <form id="formVendas" class="hidden" fieldsPrefix="vendas">
-	<p class="R4" onclick="Vendas.detalharProd1()">Detalhar produto 1</p>
+	<button class="R4" type="button" onclick="Vendas.detalharProd1()">Detalhar produto 1</button>
 	<div class="row">
 		<div class="col-3">
 			<div class="col-12" id="vendas_codProduto">Nome do produto</div>
