--- a/css/dialog.css
+++ b/css/dialog.css
@@ -8,7 +8,7 @@
 	bottom: 0;
 	background-color: black;
 	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 9999;
+	z-index: 5000;
 	overflow: auto;
 }
 
@@ -77,4 +77,8 @@
 	content: "";
 	clear: both;
 	display: table;
+}
+
+.dialogOpen {
+	overflow: hidden;
 }
