--- a/css/table.css
+++ b/css/table.css
@@ -21,7 +21,7 @@ table.R4.compact > tbody > tr > td {
 	padding: 1px 2px;
 }
 
-table.R4.striped > tbody > tr:nth-child(odd) {
+table.R4.striped > tbody > tr:nth-child(even) {
   background-color: #eaeaea;
 }
 
