--- a/css/global.css
+++ b/css/global.css
@@ -45,11 +45,14 @@ SVG Icons - svgicons.sparkk.fr
 .center   { text-align: center; }
 .right    { text-align: right;  }
 .left     { text-align: left;   }
-.hidden   { display: none;      }
+.hidden   { display: none !important; }
 .block    { display: block;     }
-.onCenter { margin: auto;       }
 .onRight  { float: right;       }
 .onLeft   { float: left;        }
+.onCenter {
+	display: block;
+	margin: auto;
+}
 
 .corner    { border-radius: 3px;  }
 .paspatur  { padding: 20px;       }
@@ -143,8 +146,11 @@ hr {
 	margin: 10px 20px;
 	border: 0;
 	height: 1px !important;
-	background-color: black;
-	background-color: rgba(0, 0, 0, 0.12);
+	background-color: #e0e0e0;
+}
+
+hr.space {
+	background-color: inherit;
 }
 
 strong {
@@ -232,4 +238,19 @@ small {
 	margin-bottom: 20px;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 	box-sizing: border-box;
+}
+
+.showPrint {
+	display: none;
+}
+
+@media print {
+
+	.showPrint {
+		display: block !important;
+	}
+
+	.hiddenPrint, .hiddenPrint * {
+		display: none !important;
+	}
 }
