--- a/css/grid.css
+++ b/css/grid.css
@@ -83,17 +83,22 @@
 	}
 }
 
-.flexBox { display: flex; }
-.flexBox.wrap { flex-wrap: wrap; }
-.flex1  { flex: 1;  }
-.flex2  { flex: 2;  }
-.flex3  { flex: 3;  }
-.flex4  { flex: 4;  }
-.flex5  { flex: 5;  }
-.flex6  { flex: 6;  }
-.flex7  { flex: 7;  }
-.flex8  { flex: 8;  }
-.flex9  { flex: 9;  }
-.flex10 { flex: 10; }
-.flex11 { flex: 11; }
-.flex12 { flex: 12; }
+.flex { display: flex; }
+.flex.wrap { flex-wrap: wrap; }
+.flex-1  { flex: 1;  }
+.flex-2  { flex: 2;  }
+.flex-3  { flex: 3;  }
+.flex-4  { flex: 4;  }
+.flex-5  { flex: 5;  }
+.flex-6  { flex: 6;  }
+.flex-7  { flex: 7;  }
+.flex-8  { flex: 8;  }
+.flex-9  { flex: 9;  }
+.flex-10 { flex: 10; }
+.flex-11 { flex: 11; }
+.flex-12 { flex: 12; }
+.flex-1, .flex-2, .flex-3, .flex-4, .flex-5,
+.flex-6, .flex-7, .flex-8, .flex-9, .flex-10,
+.flex-11, .flex-12 {
+	margin: 0 10px;
+}
