--- a/css/table.css
+++ b/css/table.css
@@ -59,3 +59,40 @@ table.R4.striped > tbody > tr:hover {
 	text-align: center;
 	font-size: 0.6rem;
 }
+
+
+/*Responsive table*/
+@media only screen and (max-width: 33.75em) {  /* 540px */
+
+	table.R4 > thead {
+		display: none;
+	}
+
+	table.R4 > tbody > tr {
+		margin-bottom: 20px;
+	}
+
+	table.R4 > tbody > tr > td {
+		display: block;
+		padding: 0 !important;
+		margin: 0;
+		min-height: 24px;
+		border-bottom: 1px dotted #e3e3e3;
+	}
+
+	table.R4 > tfoot > tr > td {
+		display: block;
+		padding: 0 !important;
+		margin: 0;
+	}
+
+	table.R4 > tbody > tr > td:not(:first-child)::before {
+		content: attr(col-title) " ";
+		float: left;
+		font-weight: bold;
+	}
+
+	table.R4 > tbody > tr > td:not(:first-child) {
+		text-align: right;
+	}
+}
