--- a/css/global.css
+++ b/css/global.css
@@ -30,6 +30,7 @@ SVG Icons - svgicons.sparkk.fr
 .bgLight   { background-color: #999999 !important; }
 .bgWhite   { background-color: #ffffff !important; }
 .bgBlack   { background-color: #000000 !important; }
+.bgInherit { background-color: inherit !important; }
 
 .info    { color: #2196f3 !important; }
 .primary { color: #673ab7 !important; }
@@ -56,6 +57,7 @@ SVG Icons - svgicons.sparkk.fr
 
 .corner    { border-radius: 3px;  }
 .paspatur  { padding: 20px;       }
+.shadow    { box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12); }
 .clickable { cursor: pointer;     }
 .nowrap    { white-space: nowrap; }
 .btnAlignFix { padding-top: 10px; }
@@ -207,6 +209,23 @@ small {
 	display: block;
 	height: auto;
 	opacity: 1;
+}
+
+
+/*OVERLAY*/
+
+.R4Overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: black;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 5000;
+	overflow: auto;
 }
 
 
