--- a/css/fields.css
+++ b/css/fields.css
@@ -153,33 +153,36 @@
 	outline: none;
 }
 
-.R4Fields.tags > .typeAheadList {
-	z-index: 20;
-	position: absolute;
+.R4TypeAheadList {
+	z-index: 9999;
+	position: fixed;
 	margin-top: 40px;
 	background: white;
 	width: 100%;
+	max-width: 300px;
+	max-height: 500px;
+	overflow: auto;
 }
 
-.R4Fields.tags > .typeAheadList > ul {
+.R4TypeAheadList > ul {
 	list-style: none;
 	padding: 0;
 	margin-bottom: 0;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 }
 
-.R4Fields.tags > .typeAheadList > ul > li {
+.R4TypeAheadList > ul > li {
 	cursor: pointer;
 	padding: 5px;
 	min-height: 45px;
 	border-bottom: 1px solid #f1f3f4;
 }
 
-.R4Fields.tags > .typeAheadList > ul > li.marked {
+.R4TypeAheadList > ul > li.marked {
 	background-color: #F1F164;
 }
 
-.R4Fields.tags > .typeAheadList > ul > li > .itemExtra {
+.R4TypeAheadList > ul > li > .itemExtra {
 	color: gray;
 	font-size: 12px;
 }
@@ -222,6 +225,7 @@
 
 /* SWITCH ================================= */
 .R4Fields.switch {
+	font-size: 14px;
 /*
 	display: inline-block;
 	position: relative;
