--- a/utils/initPack/src/_assets/templates/templates.html
+++ b/utils/initPack/src/_assets/templates/templates.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Language" content="pt-br">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="Description" content="">
-<meta name="theme-color" content="#2196f3"/>
+<meta name="theme-color" content="#7C7C7C"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="manifest" href="manifest.json">
