Ajuste de CSS. Elementos não selecionáveis

--- a/css/fields.css
+++ b/css/fields.css
@@ -244,6 +244,7 @@
 	display: block;
 	padding: 9px 0 0 44px;
 	cursor: pointer;
+	user-select: none;
 }
 .R4Fields.switch > label:before {
 	content: '';
