--- a/css/global.css
+++ b/css/global.css
@@ -15,6 +15,7 @@ svg.icon path,
 svg.icon polygon,
 svg.icon rect {
 	fill: inherit;
+	stroke: inherit;
 }
 
 /*
@@ -63,7 +64,7 @@ svg.icon circle {
 
 .corner      { border-radius: 3px;  }
 .paspatur    { padding: 20px;       }
-.shadow      { box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12); }
+.shadow      { box-shadow: 0 2px 2px 0 #d2d2d2, 0 0 2px 0 #dcdcdc; }
 .clickable   { cursor: pointer;     }
 .nowrap      { white-space: nowrap; }
 .noscroll    { overflow: hidden;    }
@@ -268,7 +269,7 @@ ul.R4 {
 .panel {
 	padding: 20px;
 	margin-bottom: 20px;
-	box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
+	box-shadow: 0 2px 2px 0 #d2d2d2, 0 0 2px 0 #dcdcdc;
 	box-sizing: border-box;
 }
 
