--- a/css/fields.css
+++ b/css/fields.css
@@ -262,15 +262,12 @@
 	content: '';
 	position: absolute;
 	top: 10px;
-	left: 0;
+	left: 1px;
 	width: 19px;
 	height: 19px;
 	background-color: #fff;
 	border-radius: 14px;
-	box-shadow:
-		0 2px 2px 0 #D7D7D7,
-		0 3px 1px -2px #C8C8C8,
-		0 1px 5px 0 #DCDCDC;
+	box-shadow: 1px 1px 1px gray;
 	z-index: 2;
 	transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
 	transition-property: left, background-color;
