--- a/css/global.css
+++ b/css/global.css
@@ -6,16 +6,19 @@ SVG Icons - svgicons.sparkk.fr
 
 
 svg.icon {
-	width: 22px;
-	height: 22px;
-	vertical-align: middle;
+	vertical-align: -0.25em;
+	width: 1.1em;
+	height: 1.1em;
+}
+
+svg + * {
+	margin-left: 7px;
 }
 
 svg.icon path,
 svg.icon polygon,
 svg.icon rect {
-	fill: inherit;
-	stroke: inherit;
+	fill: currentColor;
 }
 
 /*
