Diversos pequenos ajustes

--- a/css/global.css
+++ b/css/global.css
@@ -81,7 +81,7 @@ svg.icon circle {
 
 .badge {
 	border-radius: 3px;
-	padding: 3px;
+	padding: 3px 5px;
 	background-color: #2196f3;
 	color: white;
 	margin-left: 1px;
