--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,4 +1,5 @@
-button.R4 {
+button.R4,
+input[type=file]::file-selector-button {
 	position: relative;
 	display: inline-block;
 	box-sizing: border-box;
