Ajustes menores; Hint some no onclick pra evitar bug caso o elemento pai seja removido

--- a/css/global.css
+++ b/css/global.css
@@ -73,6 +73,7 @@ svg.icon circle {
 .noscroll    { overflow: hidden;    }
 .nosel       { user-select: none;   }
 .btnAlignFix { padding-top: 10px;   }
+.bold        { font-weight: bold;   }
 
 .small {
 	color: gray;
