Ajuste no layout e msgs de erro dos campos

--- a/css/fields.css
+++ b/css/fields.css
@@ -13,7 +13,7 @@
 	margin-top: 10px;
 	width: 100%;
 	border: none;
-	border-bottom: 1px solid #dedede;
+	border-bottom: 1px solid #374957;
 	box-sizing: border-box;
 	background-color: inherit;
 	color: #555;
